Refine multi-trade portal experience
